--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,9 +1,17 @@
-{% if questions_list %}
-    <ul>
-    {% for question in questions_list %}
-        <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
+<!DOCTYPE html>
+<html>
+<head>
+	<title>First Few Questions</title>
+</head>
+<body>
+	{% if questions_list %}
+	    <ul>
+	    {% for question in questions_list %}
+	        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+	    {% endfor %}
+	    </ul>
+	{% else %}
+	    <p>No polls are available.</p>
+	{% endif %}
+</body>
+</html>
