learned unit testing with django

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>First Few Questions</title>
+	<title>Recent Questions</title>
 </head>
 <body>
 	{% if questions_list %}
